--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.23.22",
     "next": "15.1.6",
     "next-sanity": "^11.4.2",
     "next-themes": "^0.4.4",
